--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Pelican Site to GitHub Pages
+name: Deploy Jekyll site to GitHub Pages
 
 on:
   push:
@@ -21,25 +21,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
-      - name: Setup Python
-        uses: actions/setup-python@v4
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          python-version: '3.11'
-          cache: 'pip'
-          
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          
+          ruby-version: '3.1'
+          bundler-cache: true
+
       - name: Build site
-        run: |
-          pelican content -s publishconf.py
-          
+        run: bundle exec jekyll build
+        env:
+          JEKYLL_ENV: production
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: ./output
+          path: ./_site
 
   deploy:
     environment:
@@ -50,4 +47,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
