--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -29,9 +29,9 @@ jobs:
           bundler-cache: true
 
       - name: Build site
-        run: bundle exec jekyll build
-        env:
-          JEKYLL_ENV: production
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: "."
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
